# OpenGLproj

./: .cproject  .project  CMakeLists.txt  README.md
include/: gladDeclaration.h  resources.h  shaders.h  textures.h  window.h
res/: frag.glsl  vert.glsl
src/: main.cpp  resources.cpp  shader.cpp  textures.cpp  window.cpp
